allprojects {
  group = "com.threerings"
  version = "1.1-SNAPSHOT"

  ext {
    gdxVersion = "1.5.4"
    naryaVersion = "1.19"
    nenyaVersion = "1.7.2"
    depotVersion = "1.8"
    towns = [ "frontier_town", "indian_post" ]
    // indicates whether we're building for test or production
    // when "package" target is invoked the deployment will be set to "prod"
    deployment = "test"
  }

  apply plugin: "java-library"

  java {
    toolchain {
      languageVersion = JavaLanguageVersion.of(21)
    }
  }

  tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.compilerArgs << '-Xlint:all' << '-Xlint:-serial' << '-Xlint:-path' << '-Xlint:-overrides'
  }

  configurations {
    tools
    // "compileOnly" replaces the legacy custom "provided" configuration, which was also added
    // to the test compile and runtime classpaths; preserve that behavior
    testImplementation.extendsFrom compileOnly
  }

  dependencies {
    tools "com.threerings:narya-tools:${naryaVersion}"
    if (project.path != ":tools") {
      tools project(":tools")
    }
  }

  repositories {
    mavenLocal()
    mavenCentral()
  }
}
